pom changes 2nd time

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <name>petclinic</name>
     <packaging>war</packaging>
     <!-- configuring webhooks --->
+    <!-- configuring webhooks --->
 
     <properties>
     	    
